# xdma_benchmark

./: CMakeLists.txt  benchmark.cu  benchmark.cuh  dma_test.cpp
